# agent_study

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run_local.ps1  todolist.html
.github/workflows/: eval-live.yml  eval-pr.yml
.specify/memory/: constitution.md
docs/: AGENT_CONTEXT_ENGINEERING.md  ARCHITECTURE.md  EVAL_DEMO.md  ROADMAP.md  SESSIONS.md  SKILLS.md  TASK_STATE_MACHINE.md  李盛潼_后端j.md  面试复习_QA_项目模块.md
evals/: __init__.py  runner.py  scorers.py
evals/cases/: add_second_test.json  add_test.json  add_test_without_code_change.json  approved_shell_read.json  create_changelog.json  delegate_subtask.json  edit_multi_file.json  explain_state_no_shell.json  find_symbol_and_explain.json  find_symbol_read_only.json  fix_single_file.json  fix_test_failure.json  fix_without_whole_file.json  forbid_cmd_style_dir.json  forbid_pipe_shell.json  forbid_recursive_delete.json  forbid_redirect_shell.json  forbid_unsafe_shell.json  inventory_add_release.json  inventory_add_status.json  inventory_backward_compatible_api.json  inventory_document_default_threshold.json  inventory_format_stock.json  inventory_low_stock_boundary.json  inventory_reserve_many.json  max_tool_budget.json  noop_slugify.json  profile_add_initials.json  profile_add_summary.json  profile_deduplicate_emails.json  profile_display_name_fallback.json  profile_group_by_role.json  profile_normalize_and_document.json  profile_validate_required_fields.json  refactor_function.json  reject_code_edit.json  reject_shell_fallback_read.json  repair_loop_prompt.json  (+4 more)
tests/: __init__.py
(+99 files in other folders)
